--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,11 @@
         "hiqdev/hidev-php": "<2.0 || dev-master",
         "hiqsol/hidev-hiqsol": "<2.0 || dev-master"
     },
+    "autoload": {
+        "psr-4": {
+            "yii\\": "src"
+        }
+    },
     "replace": {
         "yiisoft/yii2": "*"
     }
