--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,12 @@
         "hiqdev/hidev-php": "<2.0 || dev-master",
         "hiqsol/hidev-hiqsol": "<2.0 || dev-master"
     },
+    "extra": {
+        "config-plugin": {
+            "params": "src/config/params.php",
+            "common": "src/config/common.php"
+        }
+    },
     "autoload": {
         "psr-4": {
             "yii\\": "src"
