--- a/hidev.yml
+++ b/hidev.yml
@@ -1,7 +1,7 @@
 package:
     type:       library
-    name:       myi
-    title:      Myi
-    headline:   Myi
-    keywords:   myi
+    name:       core
+    title:      Core
+    headline:   Core
+    keywords:   core
     license:    BSD-3-Clause
