--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         }
     ],
     "require": {
-        "yiisoft/di": "dev-master"
+        "yiisoft/di": "dev-master",
+        "psr/log": "^1.0",
+        "psr/simple-cache": "^1.0"
     },
     "require-dev": {
         "hiqdev/hidev-php": "<2.0 || dev-master",
