--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
-    "name": "yiisoft/yii2-dev",
-    "description": "Yii PHP Framework Version 2 - Development Package",
+    "name": "yiisoft/yii2",
+    "description": "Yii PHP Framework Version 2",
     "keywords": [
         "yii2",
         "framework"
     ],
     "homepage": "http://www.yiiframework.com/",
-    "type": "yii2-extension",
+    "type": "library",
     "license": "BSD-3-Clause",
     "authors": [
         {
@@ -62,11 +62,6 @@
         "irc": "irc://irc.freenode.net/yii",
         "source": "https://github.com/yiisoft/yii2"
     },
-    "minimum-stability": "dev",
-    "prefer-stable": true,
-    "replace": {
-        "yiisoft/yii2": "self.version"
-    },
     "require": {
         "php": ">=7.1.0",
         "ext-mbstring": "*",
@@ -78,40 +73,21 @@
         "psr/http-message": "~1.0.0",
         "cebe/markdown": "~1.0.0 | ~1.1.0"
     },
-    "require-dev": {
-        "ezyang/htmlpurifier": "~4.6",
-        "phpunit/phpunit": "~6.2.3",
-        "cebe/indent": "~1.0.2",
-        "friendsofphp/php-cs-fixer": "~2.2.3"
-    },
     "suggest": {
-        "ezyang/htmlpurifier": "required at `yii\\helpers\\HtmlPurifier` for 'html' data format support (e.g. `yii\\i18n\\Formatter:asHtml()`)",
-        "yiisoft/yii2-coding-standards": "you can use this package to check for code style issues when contributing to yii"
+        "ezyang/htmlpurifier": "version '~4.6' required at 'yii\\helpers\\HtmlPurifier' for 'html' data format support (e.g. 'yii\\i18n\\Formatter:asHtml()' and 'yii\\helpers\\StringHelper::truncateHtml()')"
     },
     "autoload": {
-        "psr-4": {
-            "yii\\": "framework/",
-            "yii\\cs\\": "cs/src/"
-        },
+        "psr-4": {"yii\\": ""},
         "classmap": [
-            "framework/Yii.php"
+           "Yii.php"
         ]
     },
-    "autoload-dev": {
-        "psr-4": {
-            "yiiunit\\": "tests/",
-            "yii\\build\\": "build/"
-        }
-    },
-    "config": {
-        "platform": {"php": "7.1"}
-    },
     "bin": [
-        "framework/yii"
+        "bin/yii"
     ],
     "extra": {
         "branch-alias": {
-            "dev-master": "3.0.x-dev"
+            "dev-master": "2.0.x-dev"
         }
     }
 }
